frontend/src/assets/main.css
@import "./base.css";
@import "./buttons.css";
@import "./headers.css";
@import "./inputs.css";

body {
  margin: 0;
  padding: 0;
}

main {
  padding: 20px 40px;
}

.container {
  display: flex;
}

.spacer {
  flex: 1;
}

.row {
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}

.column {
  display: flex;
  flex-direction: column;
  flex: 1;
}

.center-text {
  text-align: center;
  font-family: Inter, sans-serif;
  width: 100%;
}

.drawer-item {
  margin-top: 0.8rem;
  padding: 0.2rem;
}

